[gd_scene load_steps=19 format=3 uid="uid://b3nf17l55ya4t"]

[ext_resource type="Script" path="res://scenes/characters/hero.gd" id="1_q5ie8"]
[ext_resource type="PackedScene" uid="uid://iiiwl66gsglr" path="res://scenes/bomb_explosion.tscn" id="2_4cock"]
[ext_resource type="Texture2D" uid="uid://ck2hdnf7qf17c" path="res://assets/badguy.png" id="2_5t1vk"]
[ext_resource type="Script" path="res://scripts/components/health_component.gd" id="3_1w40q"]
[ext_resource type="Script" path="res://scripts/components/shooter_component.gd" id="4_fn518"]
[ext_resource type="AudioStream" uid="uid://cudrytuo77vax" path="res://assets/sounds/player_hurt.wav" id="5_4i3cy"]
[ext_resource type="AudioStream" uid="uid://bjd24dtr7l3ve" path="res://assets/sounds/player_heal.wav" id="5_7fbeb"]
[ext_resource type="PackedScene" uid="uid://cwqe4rg0veby0" path="res://scenes/bullets/player_bullet.tscn" id="5_mt37e"]
[ext_resource type="Script" path="res://scripts/components/death_component.gd" id="6_1j2c6"]
[ext_resource type="Script" path="res://scripts/components/drop_on_death_component.gd" id="7_okt4v"]
[ext_resource type="AudioStream" uid="uid://ykqneqef0l5x" path="res://assets/sounds/player_shoot.wav" id="9_luo1e"]
[ext_resource type="Script" path="res://scripts/components/fuel_component.gd" id="10_ig05v"]
[ext_resource type="PackedScene" uid="uid://5wqi0dx00afu" path="res://scenes/effects/player_explosion.tscn" id="10_m17i8"]
[ext_resource type="AudioStream" uid="uid://bsxyjoiirew2o" path="res://assets/sounds/player_fuel.wav" id="14_bkde8"]
[ext_resource type="AudioStream" uid="uid://c3ps4781bq4n3" path="res://assets/sounds/alarm.wav" id="15_2ikxx"]
[ext_resource type="AudioStream" uid="uid://dklou7nou8s5n" path="res://assets/sounds/player_powerup.wav" id="15_ooarr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3jy3i"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bdqjg"]
radius = 16.0312

[node name="Hero" type="CharacterBody2D" groups=["Hero"]]
collision_mask = 8
motion_mode = 1
script = ExtResource("1_q5ie8")
firerate = 0.5
bomb_count = 3
explosion_scene = ExtResource("2_4cock")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_3jy3i")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 4)
texture = ExtResource("2_5t1vk")

[node name="BulletArea" type="Area2D" parent="."]
collision_mask = 22

[node name="BulletHitbox" type="CollisionPolygon2D" parent="BulletArea"]
position = Vector2(0, 4)
polygon = PackedVector2Array(0, -1, -2, 2, 2, 2)

[node name="PickupArea" type="Area2D" parent="."]
position = Vector2(1, 0)
collision_mask = 16

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="PickupArea"]
position = Vector2(-1, 0)
polygon = PackedVector2Array(0, -3, -7, 10, 7, 10)

[node name="Health_Component" type="Node" parent="." node_paths=PackedStringArray("heal_sound_effect", "hurt_sound_effect")]
script = ExtResource("3_1w40q")
max_health = 500
current_health = 500
heal_sound_effect = NodePath("heal_sound")
hurt_sound_effect = NodePath("damage_sound")

[node name="heal_sound" type="AudioStreamPlayer2D" parent="Health_Component"]
stream = ExtResource("5_7fbeb")
volume_db = -12.0

[node name="damage_sound" type="AudioStreamPlayer2D" parent="Health_Component"]
stream = ExtResource("5_4i3cy")
volume_db = -6.0

[node name="Shooter_Component" type="Node2D" parent="." node_paths=PackedStringArray("shoot_sound")]
position = Vector2(0, -7)
script = ExtResource("4_fn518")
bullet_to_spawn = ExtResource("5_mt37e")
is_hero = true
damage = 100
min_speed = 40.0
max_speed = 60.0
shoot_sound = NodePath("shoot")

[node name="shoot" type="AudioStreamPlayer2D" parent="Shooter_Component"]
stream = ExtResource("9_luo1e")
volume_db = -12.0
max_polyphony = 4

[node name="DeathComponent" type="Node" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("6_1j2c6")
health_component = NodePath("../Health_Component")

[node name="AvoidanceArea" type="Area2D" parent="."]
collision_mask = 6

[node name="AvoidanceShape" type="CollisionShape2D" parent="AvoidanceArea"]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_bdqjg")

[node name="DropOnDeathComponent" type="Node2D" parent="." node_paths=PackedStringArray("health_component")]
script = ExtResource("7_okt4v")
is_guaranteed = true
to_spawn = Array[PackedScene]([ExtResource("10_m17i8")])
health_component = NodePath("../Health_Component")

[node name="PanicArea" type="Area2D" parent="."]
collision_mask = 6

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="PanicArea"]
polygon = PackedVector2Array(0, -3, -7, 10, 7, 10)

[node name="FuelComponent" type="Node" parent="." node_paths=PackedStringArray("health_component", "fuel_up_sound", "out_of_fuel")]
script = ExtResource("10_ig05v")
health_component = NodePath("../Health_Component")
max_fuel = 1000
current_fuel = 1000
base_drain = 20.0
drain_growth = 1.0
health_drain_multiplier = 0.25
fuel_up_sound = NodePath("AudioStreamPlayer2D")
out_of_fuel = NodePath("OutOfFuel")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="FuelComponent"]
stream = ExtResource("14_bkde8")
volume_db = -12.0

[node name="OutOfFuel" type="AudioStreamPlayer2D" parent="FuelComponent"]
stream = ExtResource("15_2ikxx")
volume_db = -18.0
panning_strength = 0.66

[node name="PowerupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_ooarr")
volume_db = -9.0
max_polyphony = 2

[connection signal="body_entered" from="BulletArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="PickupArea" to="." method="_on_pickup_area_body_entered"]
[connection signal="health_changed" from="Health_Component" to="." method="_on_health_component_health_changed"]
[connection signal="health_empty" from="Health_Component" to="." method="_on_health_component_health_empty"]
